--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -10,4 +10,4 @@ liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
-custom: ['https://saweria.co/DikaArdnt', 'https://www.paypal.com/paypalme/Cakhaho', 'hisoka-morou.netlify.app'] #
+custom: ['https://saweria.co/MikasaGCH'] #
